--- a/source/less/description.less
+++ b/source/less/description.less
@@ -93,7 +93,7 @@
   padding: 0;
   margin-top: 28px;
 
-  font-weight: 400;
+  font-weight: normal;
   font-size: 36px;
   line-height: 36px;
   text-align: center;
