--- a/source/less/form-page.less
+++ b/source/less/form-page.less
@@ -2,6 +2,7 @@
   display: flex;
   flex-direction: column;
 }
+
 .form-page__start {
   width: 320px;
   margin: 0 auto;
@@ -9,60 +10,66 @@
   @media (min-width: @tablet-width) {
     width: 710px;
   }
+
   @media (min-width: @desktop-width) {
     width: 1220px;
     margin-top: 35px;
   }
 }
+
 .form-page h1 {
   margin: 0;
   padding: 0;
-  font-size: 36px;
-  line-height: 60px;
-  font-weight: 400;
-
+  margin-top: 16px;
   padding: 0 20px;
   box-sizing: border-box;
 
-  margin-top: 16px;
+  font-weight: normal;
+  font-size: 36px;
+  line-height: 60px;
 
   @media (min-width: @tablet-width) {
-    font-size: 60px;
-    line-height: 60px;
     padding: 0;
     margin-top: 28px;
-    }
+
+    font-size: 60px;
+    line-height: 60px;
+  }
 }
 
 .form-page__start p {
+  width: 247px;
   margin: 0;
   padding: 0;
   margin-top: 25px;
   padding-left: 20px;
   box-sizing: border-box;
+
   font-size: 14px;
   line-height: 18px;
   text-transform: uppercase;
-  width: 247px;
 
   @media (min-width: @tablet-width) {
-    font-size: 20px;
-    line-height: 30px;
+    width: 324px;
     margin-top: 58px;
     margin-left: 42px;
-    width: 324px;
     padding: 0;
+
+    font-size: 20px;
+    line-height: 30px;
   }
+
   @media (min-width: @desktop-width) {
     margin-left: 0;
   }
 }
+
 .form-page form {
   display: flex;
   flex-direction: column;
 }
-.form-page__first-container {
 
+.form-page__first-container {
   @media (min-width: @desktop-width) {
     display: flex;
     justify-content: space-between;
@@ -70,5 +77,3 @@
     margin: 0 auto;
   }
 }
-
-
