--- a/source/less/style.less
+++ b/source/less/style.less
@@ -2,7 +2,7 @@
   font-weight: normal;
   font-style: normal;
   font-display: swap;
-  font-family: "Oswald", "Arial", sans-serif;
+  font-family: "Oswald";
   src: url("../fonts/oswaldregular.woff2") format("woff2"),
   url("../fonts/oswaldregular.woff") format("woff");
 }
@@ -11,7 +11,7 @@
   font-weight: bold;
   font-style: normal;
   font-display: swap;
-  font-family: "Oswald", "Arial", sans-serif;
+  font-family: "Oswald";
   src: url("../fonts/oswaldmedium.woff2") format("woff2"),
   url("../fonts/oswaldmedium.woff") format("woff");
 }
@@ -53,7 +53,7 @@ body {
   margin: 0;
   padding: 0;
 
-  font-weight: 400;
+  font-weight: normal;
   font-family: "Oswald", "Arial", sans-serif;
   text-transform: none;
   color: #000000;
