--- a/source/less/additionally.less
+++ b/source/less/additionally.less
@@ -110,7 +110,7 @@
     width: 1220px;
     min-height: 155px;
     margin-top: 56px;
-    margin-bottom: 0px;
+    margin-bottom: 0;
   }
 }
 
@@ -184,7 +184,7 @@
 .additionally input:checked + label::after {
   content: "";
   position: absolute;
-  top: 0px;
+  top: 0;
   left: -40px;
 
   width: 18px;
