--- a/source/less/programs.less
+++ b/source/less/programs.less
@@ -159,8 +159,8 @@
 
   @media (min-width: @tablet-width) {
     max-width: 340px;
-    margin-top: 0px;
-    margin-left: 0px;
+    margin-top: 0;
+    margin-left: 0;
 
     font-size: 36px;
     line-height: 37px;
