--- a/source/less/owner.less
+++ b/source/less/owner.less
@@ -56,7 +56,7 @@
   @media (min-width: @desktop-width) {
     max-width: 596px;
     margin-top: 51px;
-    margin-left: 0px;
+    margin-left: 0;
     padding-right: 39px;
     padding-left: 39px;
   }
