--- a/source/less/product.less
+++ b/source/less/product.less
@@ -137,7 +137,7 @@
   margin-top: 22px;
   margin-left: 160px;
 
-  font-weight: 400;
+  font-weight: normal;
   font-size: 16px;
   line-height: 20px;
   text-transform: uppercase;
