--- a/source/less/additional.less
+++ b/source/less/additional.less
@@ -87,7 +87,6 @@
 
 .additional__list {
   list-style: none;
-  margin: 0;
   padding: 0;
 
   display: flex;
@@ -119,13 +118,11 @@
 .additional__gift {
   position: relative;
 
-  margin: 0;
   padding: 0;
   display: flex;
   width: 280px;
   min-height: 289px;
-  margin: 0 auto;
-  margin-top: 40px;
+  margin: 40px auto 0 auto;
 
   background-color: @bg-green;
   background-image: url("../img/gift-photo-mobile@1x.jpg");
@@ -178,6 +175,7 @@
     top: 65px;
     left: 90px;
   }
+
   @media (min-width: @desktop-width) {
     left: 95px;
   }
