исправляем по эдитору

--- a/source/less/style.less
+++ b/source/less/style.less
@@ -4,7 +4,7 @@
   font-display: swap;
   font-family: "Oswald";
   src: url("../fonts/oswaldregular.woff2") format("woff2"),
-  url("../fonts/oswaldregular.woff") format("woff");
+    url("../fonts/oswaldregular.woff") format("woff");
 }
 
 @font-face {
@@ -12,37 +12,31 @@
   font-style: normal;
   font-display: swap;
   font-family: "Oswald";
-  src: url("../fonts/oswaldmedium.woff2") format("woff2"),
-  url("../fonts/oswaldmedium.woff") format("woff");
+  src: url("../fonts/oswaldmedium.woff2") format("woff2"),    url("../fonts/oswaldmedium.woff") format("woff");
 }
 
 @import "page-header.less";
 @import "main-nav.less";
-
 @import "page-main.less";
 @import "description.less";
 @import "programs.less";
 @import "how-work.less";
 @import "example.less";
 @import "slider.less";
-
 @import "page-footer.less";
 @import "social.less";
-
 @import "main-catalog.less";
 @import "product.less";
 @import "product-show.less";
 @import "button.less";
 @import "additional.less";
 @import "product-add.less";
-
 @import "form-page.less";
 @import "cat.less";
 @import "form-programs.less";
 @import "owner.less";
 @import "comment.less";
 @import "additionally.less";
-
 @import "variables.less";
 @import "visually-hidden.less";
 
@@ -58,11 +52,9 @@ body {
   text-transform: none;
   color: #000000;
 
-  background-color: #ffffff;
-  background-position: top center;
+  background-image: url("../img/substrate/cat-energy-inde-mobile.jpg");
+  background-position: 50% 0;
   background-repeat: no-repeat;
-
-  background: url("../img/substrate/cat-energy-inde-mobile.jpg")  no-repeat 50% 0;
   background-size: 320px auto;
 }
 
