--- a/source/css/style.css
+++ b/source/css/style.css
@@ -2320,7 +2320,6 @@
 }
 .additional__list {
   list-style: none;
-  margin: 0;
   padding: 0;
   display: -webkit-box;
   display: -ms-flexbox;
@@ -2355,15 +2354,13 @@
 }
 .additional__gift {
   position: relative;
-  margin: 0;
   padding: 0;
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
   width: 280px;
   min-height: 289px;
-  margin: 0 auto;
-  margin-top: 40px;
+  margin: 40px auto 0 auto;
   background-color: #68b738;
   background-image: url("../img/gift-photo-mobile@1x.jpg");
   background-position: 0 0;
