--- a/source/less/comment.less
+++ b/source/less/comment.less
@@ -21,7 +21,7 @@
   margin: 0 auto;
 
   @media (min-width: @tablet-width) {
-    width: 768px
+    width: 768px;
   }
 
   @media (min-width: @desktop-width) {
