--- a/source/css/style.css
+++ b/source/css/style.css
@@ -429,7 +429,6 @@
   -webkit-box-direction: normal;
       -ms-flex-direction: column;
           flex-direction: column;
-  margin: 0;
   padding: 0;
   list-style: none;
   margin: 0 auto;
@@ -448,10 +447,9 @@
 }
 .programs__item {
   position: relative;
-  margin: 0;
-  padding: 0;
   width: 280px;
   min-height: 265px;
+  margin: 0;
   padding: 20px;
   -webkit-box-sizing: border-box;
           box-sizing: border-box;
@@ -1744,7 +1742,6 @@
 .social__list {
   position: relative;
   list-style: none;
-  margin: 0;
   padding: 0;
   width: 280px;
   min-height: 64px;
@@ -1829,7 +1826,6 @@
   padding: 17px 0 0 0;
 }
 .main-catalog h1 {
-  margin: 0;
   padding: 0;
   width: 320px;
   margin: 0 auto;
@@ -1858,7 +1854,6 @@
 }
 .main-catalog__list {
   list-style: none;
-  margin: 0;
   padding: 0;
   margin: 0 auto;
 }
@@ -2598,7 +2593,6 @@
 }
 .form-page h1 {
   margin: 0;
-  padding: 0;
   margin-top: 16px;
   padding: 0 20px;
   -webkit-box-sizing: border-box;
@@ -2664,8 +2658,6 @@
   }
 }
 .cat {
-  margin: 0;
-  padding: 0;
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -2681,6 +2673,7 @@
   min-height: 190px;
   margin: 0 auto;
   margin-top: 39px;
+  padding: 0;
   padding-left: 20px;
   padding-right: 20px;
   -webkit-box-sizing: border-box;
@@ -2782,7 +2775,6 @@
   margin: 0 auto;
   -webkit-box-sizing: border-box;
           box-sizing: border-box;
-  border: none;
   border: 1px solid #ededed;
 }
 @media (min-width: 768px) {
@@ -2952,7 +2944,6 @@
   }
 }
 .owner__container {
-  margin: 0;
   padding: 0;
   display: -webkit-box;
   display: -ms-flexbox;
@@ -3551,10 +3542,9 @@ body {
   font-family: "Oswald", "Arial", sans-serif;
   text-transform: none;
   color: #000000;
-  background-color: #ffffff;
-  background-position: top center;
+  background-image: url("../img/substrate/cat-energy-inde-mobile.jpg");
+  background-position: 50% 0;
   background-repeat: no-repeat;
-  background: url("../img/substrate/cat-energy-inde-mobile.jpg") no-repeat 50% 0;
   background-size: 320px auto;
 }
 a {
