--- a/source/less/product.less
+++ b/source/less/product.less
@@ -2,6 +2,7 @@
   @media (max-width: @mobile-width-only) {
     border-top: 1px solid #ededed;
   }
+
   position: relative;
 
   display: flex;
@@ -205,9 +206,12 @@
   display: block;
   width: 280px;
   margin: 0 auto;
-  padding-top: 12px;
-  padding-bottom: 11px;
+  padding-top: 13px;
+  padding-bottom: 8px;
   box-sizing: border-box;
+
+  font-size: 16px;
+  line-height: 20px;
 
   @media (min-width: @tablet-width) {
     width: 245px;
