--- a/source/less/page-footer.less
+++ b/source/less/page-footer.less
@@ -5,22 +5,15 @@
   flex-direction: column;
   width: 100%;
   margin: 0 auto;
-  padding: 28px 0;
+  padding: 28px 0 0 0;
 
-  opacity: 1;
-}
-
-@media (min-width: @tablet-width) {
-  .page-footer {
-    padding: 65px 0;
+  @media (min-width: @tablet-width) {
+    padding: 65px 0 0 0;
   }
-}
 
-@media (min-width: @desktop-width) {
-  .page-footer {
+  @media (min-width: @desktop-width) {
     position: relative;
 
-    width: 1300px;
     min-height: 550px;
     padding: 0;
   }
