--- a/source/css/style.css
+++ b/source/css/style.css
@@ -2062,10 +2062,12 @@
   display: block;
   width: 280px;
   margin: 0 auto;
-  padding-top: 12px;
-  padding-bottom: 11px;
+  padding-top: 13px;
+  padding-bottom: 8px;
   -webkit-box-sizing: border-box;
           box-sizing: border-box;
+  font-size: 16px;
+  line-height: 20px;
 }
 @media (min-width: 768px) {
   .product__link {
@@ -2183,9 +2185,26 @@
     margin-left: auto;
   }
 }
-.product__link {
+.product-show__link {
+  display: block;
+  width: 280px;
+  margin: 0 auto;
+  padding-top: 10px;
+  padding-bottom: 9px;
+  -webkit-box-sizing: border-box;
+          box-sizing: border-box;
   font-size: 16px;
-  line-height: 16px;
+  line-height: 20px;
+}
+@media (min-width: 768px) {
+  .product-show__link {
+    width: 245px;
+  }
+}
+@media (min-width: 1300px) {
+  .product-show__link {
+    width: 168px;
+  }
 }
 .button {
   display: block;
@@ -3542,7 +3561,7 @@ body {
   font-family: "Oswald", "Arial", sans-serif;
   text-transform: none;
   color: #000000;
-  background-image: url("../img/substrate/cat-energy-inde-mobile.jpg");
+  background-image: url("../img/substrate/cat-energy-catalo-mobile.jpg");
   background-position: 50% 0;
   background-repeat: no-repeat;
   background-size: 320px auto;
@@ -3556,13 +3575,13 @@ img {
 }
 @media (min-width: 768px) {
   body {
-    background: url("../img/substrate/cat-energy-inde-tablet.jpg") no-repeat 50% 0;
+    background: url("../img/substrate/cat-energy-catalo-tablet.jpg") no-repeat 50% 0;
     background-size: 768px auto;
   }
 }
 @media (min-width: 1300px) {
   body {
-    background: url("../img/substrate/cat-energy-inde-desktop.jpg") no-repeat 50% 0;
+    background: url("../img/substrate/cat-energy-catalo-desktop.jpg") no-repeat 50% 0;
     background-size: 1440px auto;
   }
 }
